--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>music</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but music doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <style>
+    html,
+    body {
+      width: 100%;
+      margin: 0;
+      /* iphone6  375px,1rem = 100px */
+      font-size: 26.6525vw;
+    }
+  </style>
+  <title>music</title>
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but music doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+  <script>
+    console.log('%c%s', 'color:blue', getComputedStyle(document.documentElement, null)['fontSize']);
+  </script>
+</body>
+
 </html>
