--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
       margin: 0;
       /* iphone6  375px,1rem = 100px */
       font-size: 26.6525vw;
+      overflow-x: hidden;
     }
   </style>
   <title>music</title>
@@ -23,7 +24,7 @@
     <strong>We're sorry but music doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
-  <!-- built files will be auto injected -->
+    <!-- built files will be auto injected -->
   <script>
     console.log('%c%s', 'color:blue', getComputedStyle(document.documentElement, null)['fontSize']);
   </script>
